--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ response = jsdb.selectRecords(tn, criteria);
 console.log("Selected Records", response);
 
 var sys = jsdb.getSystem();
-var stringCheck = sys.data.areStringsSimilar("Ronald", "Ronald");
+var stringCheck = sys.data.areStringsSimilar("Doggie", "Dog");
 console.log("Similar check", stringCheck);
 </script>
 </head>
