--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="scripts/jsdb.js"></script>
+<script src="scripts/deebs.js"></script>
 <script>
 var tn = "table1";
-jsdb.createTable(tn);
-jsdb.addRecord(tn, {first: "Ron", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6, crunk: function(){alert("what!");}});
-jsdb.addRecord(tn, {first: "Don", last: "zims", adress: "10936 Drexel", age: 34, heigh: 6});
-jsdb.addRecord(tn, {first: "Lon", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6});
-jsdb.addRecord(tn, {first: "Jon", last: "Dims"});
-jsdb.addRecord(tn, {first: "Son", last: "Zims"});
+var opts = $db.setOptions({user: "Gandorf",
+    superUser: true,
+    user: "Ronny",
+    debug: true,
+    indexOffset: true
+});
+
+$db.createTable(tn);
+$db.addRecord(tn, {first: "Ron", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6, crunk: function(){alert("what!");}});
+$db.addRecord(tn, {first: "Don", last: "zims", adress: "10936 Drexel", age: 34, heigh: 6});
+$db.addRecord(tn, {first: "Lon", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6});
+$db.addRecord(tn, {first: "Jon", last: "Dims"});
+$db.addRecord(tn, {first: "Son", last: "Zims"});
 
 var moreRecords = [
                    {first: "zon", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6,crunk: function(){alert("what!");}},
@@ -18,30 +25,43 @@ var moreRecords = [
                    {first: "Tron", last: "Sims", adress: "10936 Drexel", age: 31, heigh: 6, crunk: function(){alert("what!");}},
                    {first: "Gwon", last: "dims", adress: "10936 Drexel", age: 32, heigh: 6}
                    ];
-/*for(var i = 0; i < moreRecords.length; i++){
-    jsdb.addRecord(tn, moreRecords[i]);
-}*/
                    
-jsdb.addRecords(tn, moreRecords);
+for(var i = 0; i < moreRecords.length; i++){
+    $db.addRecord(tn, moreRecords[i]);
+    $db.addRecord(tn, moreRecords[i]);
+}
+                   
+$db.addRecords(tn, moreRecords);
 
-var response = jsdb.getRecords(tn, "*");
+var response = $db.getRecords(tn, "*");
 console.log("All Records", response);
 
 var criteria = {
         first:"Lon",
         last:"Sims"
 };
-response = jsdb.selectRecords(tn, criteria);
+
+response = $db.selectRecords(tn, criteria);
 console.log("Selected Records", response);
-/*
-var sys = jsdb.getSystem();
-var stringCheck = sys.data.areLikeStrings("Doggie", "Dog");
-console.log("Similar check", stringCheck);
-*/
+//var sys = $db.getSystem();
+//var stringCheck = sys.data.areLikeStrings("Doggie", "Dog");
+//console.log("Similar check", stringCheck);
+
 var record = {first: "Ron", last: "Sims", adress: "10936 Drexel", age: 34, heigh: 6};
-var likeCheck = jsdb.getLikeRecords(tn, record);
+var likeCheck = $db.getLikeRecords(tn, record);
 console.log("like records", likeCheck);
 
+var update = {first: "Bobby", last: "Sullen", grade: 6};
+
+var updatedRecord = $db.updateRecord(tn, "2", update);
+
+var nf = function(x){
+    console.log(this);
+    console.log(x);
+};
+
+var ext = $db.extend(nf,"addRecord")
+console.log("extend", ext);
 </script>
 </head>
 <body>
